syntax = "proto3";

option go_package = "github.com/r04922101/go-grpc-example/oneof";
package oneof;

service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  oneof name {
    string first_name = 1;
    string last_name = 2;
  }

  oneof gender {
    bool male = 3;
    bool female = 4;
  }

  oneof default_values {
    int32 default_int = 5;
    string default_string = 6;
  }

  // invalid usages of oneof
  // oneof map<string, int32> warning_map = 7;
  // repeated oneof repeated_oneof {
  //   bool field1 = 8;
  //   bool field2 = 9;
  // } = 10;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}